fix(ios): fix placeholder flicker on iOS. #10733 11844

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -26,12 +26,6 @@ ion-textarea {
   width: 100%;
 }
 
-.item-input ion-input,
-.item-input ion-textarea {
-  position: static;
-}
-
-
 // Textarea Within An Item
 // --------------------------------------------------
 
